# LLM-API-Spec

./: .gitignore  pyproject.toml
configs/: 3model_comparison_report.json  3model_comparison_report.md
docs/: README.md  architecture.md  contributing.md  spec.md
llm_api_spec/: cli.py  models.py  openapi_validation.py  runner.py
llm_api_spec/adapters/: __init__.py  base.py  chat_completions.py  responses.py
llm_api_spec/checks/: __init__.py  basic_text.py  determinism.py  file_input.py  lifecycle.py  logprobs.py  long_context.py  multimodal.py  normalization.py  streaming.py  structured_output.py  tool_calling.py
llm_api_spec/reporting/: __init__.py  json_report.py  markdown_report.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_edge_cases.py  test_integration.py  test_models.py  test_normalization.py  test_openapi_validation.py  test_reporting.py  test_runner.py
